--- a/index.html
+++ b/index.html
@@ -20,5 +20,23 @@
         <input type="submit" name="acao" value="cadastrar" />
 
     </div>
+
+
+    <div class="lista-produtos">
+        <div class="lista-produto-single">
+            <h3>RedBull</h3>
+            <span>R$20.00</span>
+        </div>
+
+        <div class="lista-produto-single">
+            <h3>RedBull</h3>
+            <span>R$20.00</span>
+        </div>
+
+        <div class="lista-produto-single">
+            <h3>RedBull</h3>
+            <span>R$20.00</span>
+        </div>
+    </div>
 </body>
 </html>
