--- a/index.html
+++ b/index.html
@@ -25,18 +25,9 @@
     <div class="lista-produtos">
         <div class="lista-produto-single">
             <h3>RedBull</h3>
-            <span>R$20.00</span>
+            <h3 class="price-produto"><span>R$20.00</span></h3>
         </div>
 
-        <div class="lista-produto-single">
-            <h3>RedBull</h3>
-            <span>R$20.00</span>
-        </div>
-
-        <div class="lista-produto-single">
-            <h3>RedBull</h3>
-            <span>R$20.00</span>
-        </div>
-    </div>
+     
 </body>
 </html>
