--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
             <h3>RedBull</h3>
             <h3 class="price-produto"><span>R$20.00</span></h3>
         </div>
+    
 
+    <div class="soma-produto">
+        <h1>Total: R$100.00</h1>
+    </div>
      
 </body>
 </html>
