--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    
     <div class="lista-cadastro">
         <input type="text" placeholder="Nome do produto" name="nome_produto" />
-        <input type="text" placeholder="Valor do produto" name="Valor_produto" />
+        <input type="text" placeholder="Valor do produto" name="valor_produto" />
 
         <input type="submit" name="acao" value="cadastrar" />
 
