--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 
         <h2>Lista de super mercado</h2>
 
+    
     </header>
    
     <div class="lista-cadastro">
-        <input type="text" placeholder="Nome do produto" name="nome_produto" />
-        <input type="number"  name="price"  step="0.01" />
+        <input type="text" placeholder="nome do produto" name="nome_produto" />
+        <input type="number"  name="price"  step="0.01" title="this should be a number with up to 2 decimal"/>
 
         <input type="submit" name="acao" value="cadastrar" />
 
